--- a/app/package.json
+++ b/app/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.1",
+    "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.15.1",
     "@mui/x-date-pickers": "^6.18.6",
     "axios": "^1.6.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
